# HX-SayBook

./: .gitignore  README.md  pyproject.toml  start.bat  start.sh
app/: main.py
app/core/: config.py  response.py
app/routers/: batch_router.py
py/: main.py
py/core/: audio_engin.py  config.py  llm_engine.py  prompts.py  response.py  subtitle_export.py  tts_engine.py  tts_runtime.py
py/db/: database.py
py/dto/: chapter_dto.py  line_dto.py  llm_provider_dto.py  project_dto.py  role_dto.py
py/entity/: line_entity.py  project_entity.py  role_entity.py
py/models/: po.py
py/repositories/: chapter_repository.py  emotion_repository.py  line_repository.py  llm_provider_repository.py  multi_emotion_voice_repository.py  project_repository.py  prompt_repository.py  role_repository.py  strength_repository.py  tts_provider_repository.py  voice_repository.py
py/routers/: batch_router.py  chapter_router.py  emotion_router.py  line_router.py  llm_provider_router.py  multi_emotion_voice_router.py  project_router.py  prompt_router.py  role_router.py  strength_router.py  tts_provider_router.py  voice_router.py
py/services/: chapter_service.py  emotion_service.py  line_service.py  llm_provider_service.py  multi_emotion_voice_service.py  project_service.py  prompt_service.py  role_service.py  strength_service.py  tts_provider_service.py  voice_service.py
scripts/: api_server.py  install_index_tts.sh  install_index_tts_mac.sh  run_index_tts.sh
scripts/cnb/: .cnb.yml  README.md
web/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+42 files in other folders)
